Assignement1/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", 
                      "NEQUAL", "LT", "LTE", "GT", "GTE", "CONCAT", "LB", 
                      "RB", "LSB", "RSB", "DOT", "COMMA", "SM", "COLON", 
                      "LCB", "RCB", "ASS", "LINE_CMT", "BLOCK_CMT", "WS", 
                      "INTEGERLIT", "FLOATLIT", "STRINGLIT", "ID", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_funcDeclList = 1
    RULE_funcDecl = 2
    RULE_variaFuncList = 3
    RULE_variaFuncDeclarator = 4
    RULE_variableDeclList = 5
    RULE_varia_no_body = 6
    RULE_varia_yes_body = 7
    RULE_args = 8
    RULE_expList = 9
    RULE_typeType = 10
    RULE_arrayType = 11
    RULE_funcType = 12
    RULE_variType = 13
    RULE_statement = 14
    RULE_assStmt = 15
    RULE_ifStmt = 16
    RULE_forStmt = 17
    RULE_whileStmt = 18
    RULE_doWhileStmt = 19
    RULE_breakStmt = 20
    RULE_continueStmt = 21
    RULE_returnStmt = 22
    RULE_callStmt = 23
    RULE_blockStmt = 24
    RULE_expression = 25
    RULE_expression1 = 26
    RULE_expression2 = 27
    RULE_expression3 = 28
    RULE_expression4 = 29
    RULE_expression5 = 30
    RULE_expression6 = 31
    RULE_expression7 = 32
    RULE_expression8 = 33
    RULE_expression9 = 34
    RULE_expression10 = 35
    RULE_expression11 = 36
    RULE_lhs = 37
    RULE_booleanlit = 38
    RULE_arrayLit = 39
    RULE_elemArrays = 40
    RULE_elemArray = 41
    RULE_elem = 42

    ruleNames =  [ "program", "funcDeclList", "funcDecl", "variaFuncList", 
                   "variaFuncDeclarator", "variableDeclList", "varia_no_body", 
                   "varia_yes_body", "args", "expList", "typeType", "arrayType", 
                   "funcType", "variType", "statement", "assStmt", "ifStmt", 
                   "forStmt", "whileStmt", "doWhileStmt", "breakStmt", "continueStmt", 
                   "returnStmt", "callStmt", "blockStmt", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7", "expression8", 
                   "expression9", "expression10", "expression11", "lhs", 
                   "booleanlit", "arrayLit", "elemArrays", "elemArray", 
                   "elem" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    EQUAL=30
    NEQUAL=31
    LT=32
    LTE=33
    GT=34
    GTE=35
    CONCAT=36
    LB=37
    RB=38
    LSB=39
    RSB=40
    DOT=41
    COMMA=42
    SM=43
    COLON=44
    LCB=45
    RCB=46
    ASS=47
    LINE_CMT=48
    BLOCK_CMT=49
    WS=50
    INTEGERLIT=51
    FLOATLIT=52
    STRINGLIT=53
    ID=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None






    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def funcDeclList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FuncDeclListContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FuncDeclListContext,i)


        def variableDeclList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.VariableDeclListContext)
            else:
                return self.getTypedRuleContext(MT22Parser.VariableDeclListContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.ID:
                self.state = 88
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 86
                    self.funcDeclList()
                    pass

                elif la_ == 2:
                    self.state = 87
                    self.variableDeclList()
                    pass


                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncDeclContext,0)


        def funcDeclList(self):
            return self.getTypedRuleContext(MT22Parser.FuncDeclListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcDeclList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclList" ):
                return visitor.visitFuncDeclList(self)
            else:
                return visitor.visitChildren(self)




    def funcDeclList(self):

        localctx = MT22Parser.FuncDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDeclList)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.funcDecl()
                self.state = 96
                self.funcDeclList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.funcDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def funcType(self):
            return self.getTypedRuleContext(MT22Parser.FuncTypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def variaFuncList(self):
            return self.getTypedRuleContext(MT22Parser.VariaFuncListContext,0)


        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = MT22Parser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MT22Parser.ID)
            self.state = 102
            self.match(MT22Parser.COLON)
            self.state = 103
            self.match(MT22Parser.FUNCTION)
            self.state = 104
            self.funcType()
            self.state = 105
            self.match(MT22Parser.LB)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT or _la==MT22Parser.ID:
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.OUT:
                    self.state = 106
                    self.match(MT22Parser.OUT)


                self.state = 109
                self.variaFuncList()


            self.state = 112
            self.match(MT22Parser.RB)
            self.state = 113
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariaFuncListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variaFuncDeclarator(self):
            return self.getTypedRuleContext(MT22Parser.VariaFuncDeclaratorContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def variaFuncList(self):
            return self.getTypedRuleContext(MT22Parser.VariaFuncListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variaFuncList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariaFuncList" ):
                return visitor.visitVariaFuncList(self)
            else:
                return visitor.visitChildren(self)




    def variaFuncList(self):

        localctx = MT22Parser.VariaFuncListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variaFuncList)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.variaFuncDeclarator()
                self.state = 116
                self.match(MT22Parser.COMMA)
                self.state = 117
                self.variaFuncList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.variaFuncDeclarator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariaFuncDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typeType(self):
            return self.getTypedRuleContext(MT22Parser.TypeTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variaFuncDeclarator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariaFuncDeclarator" ):
                return visitor.visitVariaFuncDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def variaFuncDeclarator(self):

        localctx = MT22Parser.VariaFuncDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variaFuncDeclarator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MT22Parser.ID)
            self.state = 123
            self.match(MT22Parser.COLON)
            self.state = 124
            self.typeType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def varia_yes_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_yes_bodyContext,0)


        def varia_no_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_no_bodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variableDeclList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclList" ):
                return visitor.visitVariableDeclList(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclList(self):

        localctx = MT22Parser.VariableDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variableDeclList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 126
                self.varia_yes_body()
                pass

            elif la_ == 2:
                self.state = 127
                self.varia_no_body()
                pass


            self.state = 130
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Varia_no_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def varia_no_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_no_bodyContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def variType(self):
            return self.getTypedRuleContext(MT22Parser.VariTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varia_no_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVaria_no_body" ):
                return visitor.visitVaria_no_body(self)
            else:
                return visitor.visitChildren(self)




    def varia_no_body(self):

        localctx = MT22Parser.Varia_no_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varia_no_body)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(MT22Parser.ID)
                self.state = 133
                self.match(MT22Parser.COMMA)
                self.state = 134
                self.varia_no_body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(MT22Parser.ID)
                self.state = 136
                self.match(MT22Parser.COLON)
                self.state = 137
                self.variType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Varia_yes_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def varia_yes_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_yes_bodyContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def variType(self):
            return self.getTypedRuleContext(MT22Parser.VariTypeContext,0)


        def ASS(self):
            return self.getToken(MT22Parser.ASS, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varia_yes_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVaria_yes_body" ):
                return visitor.visitVaria_yes_body(self)
            else:
                return visitor.visitChildren(self)




    def varia_yes_body(self):

        localctx = MT22Parser.Varia_yes_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varia_yes_body)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.ID)
                self.state = 141
                self.match(MT22Parser.COMMA)
                self.state = 142
                self.varia_yes_body()
                self.state = 143
                self.match(MT22Parser.COMMA)
                self.state = 144
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(MT22Parser.ID)
                self.state = 147
                self.match(MT22Parser.COLON)
                self.state = 148
                self.variType()
                self.state = 149
                self.match(MT22Parser.ASS)
                self.state = 150
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def expList(self):
            return self.getTypedRuleContext(MT22Parser.ExpListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = MT22Parser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(MT22Parser.LB)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.FALSE) | (1 << MT22Parser.TRUE) | (1 << MT22Parser.ADD) | (1 << MT22Parser.SUB) | (1 << MT22Parser.NOT) | (1 << MT22Parser.LB) | (1 << MT22Parser.LCB) | (1 << MT22Parser.INTEGERLIT) | (1 << MT22Parser.FLOATLIT) | (1 << MT22Parser.STRINGLIT) | (1 << MT22Parser.ID))) != 0):
                self.state = 155
                self.expList()


            self.state = 158
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def expList(self):
            return self.getTypedRuleContext(MT22Parser.ExpListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_expList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpList" ):
                return visitor.visitExpList(self)
            else:
                return visitor.visitChildren(self)




    def expList(self):

        localctx = MT22Parser.ExpListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expList)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.expression()
                self.state = 161
                self.match(MT22Parser.COMMA)
                self.state = 162
                self.expList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(MT22Parser.FuncTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_typeType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeType" ):
                return visitor.visitTypeType(self)
            else:
                return visitor.visitChildren(self)




    def typeType(self):

        localctx = MT22Parser.TypeTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typeType)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.funcType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.arrayType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def INTEGERLIT(self):
            return self.getToken(MT22Parser.INTEGERLIT, 0)

        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def funcType(self):
            return self.getTypedRuleContext(MT22Parser.FuncTypeContext,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.VOID]:
                self.state = 171
                self.funcType()
                pass
            elif token in [MT22Parser.ID]:
                self.state = 172
                self.match(MT22Parser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 175
            self.match(MT22Parser.LSB)
            self.state = 176
            self.match(MT22Parser.INTEGERLIT)
            self.state = 177
            self.match(MT22Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncType" ):
                return visitor.visitFuncType(self)
            else:
                return visitor.visitChildren(self)




    def funcType(self):

        localctx = MT22Parser.FuncTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING) | (1 << MT22Parser.VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_variType
